objects/EmailSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Internal_Image_URL_Domain__c</fullName>
        <label>Internal Image URL Domain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lightning_Force_com_URL__c</fullName>
        <label>Lightning Force.com URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Image_URL_Domain__c</fullName>
        <label>Public Image URL Domain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visualforce_URL__c</fullName>
        <description>https://demandbluelabs--softtheme.my.visual.force.com</description>
        <label>Visualforce URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Email Settings</label>
</CustomObject>